--- a/language/en-GB/en-GB.plg_system_jstats.sys.ini
+++ b/language/en-GB/en-GB.plg_system_jstats.sys.ini
@@ -1,4 +1,4 @@
 PLG_SYSTEM_JSTATS="J!Stats"
-PLG_JSTATS_XML_DESCRIPTION="System Plugin that sends environment stats to a Joomla controlled server for stats analysis. Stats sent include PHP version, CMS version, Database type and Database version."
-PLG_JSTATS_UNIQUE_ID_DESC="An identifier that allows us to count unique installs of the plugin. This is sent with the stats back to the server."
+PLG_JSTATS_XML_DESCRIPTION="System Plugin that sends environment statistics to a server controlled by the Joomla! project for statistical analysis. Statistics sent include PHP version, CMS version, Database type and Database version."
+PLG_JSTATS_UNIQUE_ID_DESC="An identifier that allows us to count unique installs of the plugin. This is sent with the statistics back to the server."
 PLG_JSTATS_UNIQUE_ID_LABEL="Unique ID"
