--- a/language/en-GB/en-GB.plg_system_jstats.ini
+++ b/language/en-GB/en-GB.plg_system_jstats.ini
@@ -2,3 +2,5 @@ PLG_SYSTEM_JSTATS="J!Stats"
 PLG_JSTATS_XML_DESCRIPTION="System Plugin that sends environment statistics to a server controlled by the Joomla! project for statistical analysis. Statistics sent include PHP version, CMS version, Database type and Database version."
 PLG_JSTATS_UNIQUE_ID_DESC="An identifier that allows us to count unique installs of the plugin. This is sent with the statistics back to the server."
 PLG_JSTATS_UNIQUE_ID_LABEL="Unique ID"
+PLG_JSTATS_URL_DESC="The official Joomla server url"
+PLG_JSTATS_URL_LABEL="Url"
