--- a/language/en-GB/en-GB.plg_system_jstats.ini
+++ b/language/en-GB/en-GB.plg_system_jstats.ini
@@ -4,3 +4,4 @@ PLG_JSTATS_UNIQUE_ID_DESC="An identifier that allows us to count unique installs
 PLG_JSTATS_UNIQUE_ID_LABEL="Unique ID"
 PLG_JSTATS_URL_DESC="The official Joomla server url"
 PLG_JSTATS_URL_LABEL="Url"
+PLG_JSTATS_RESET_UNIQUE_ID="Reset Unique Id"
